# ZPG2

./: .gitignore  Application.cpp  Application.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  Drawable.cpp  Drawable.h  FragmentShader.glsl  InputKeyboard.cpp  InputKeyboard.h  InputMouse.cpp  InputMouse.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Model.cpp  Model.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  OnChangeCameraObserver.h  OnChangeCameraSubject.h  OnChangeLightObserver.h  OnChangeLightSubject.h  README.md  Scene.cpp  Scene.h  Shader.cpp  Shader.h  (+11 more)
models/: sphere.h  suzi_flat.h
models/zaloha2/: bedna.h  sphere.h  suzi_flat.h  worker.h
shaders/: Lambert-VS.glsl  Phong-FS-function.glsl  Phong-FS.glsl  Phong-VS-function.glsl  Phong-VS.glsl  Skybox-VS.glsl  Terrain-FS.glsl  Terrain-VS.glsl
textures/: box_male.jpf
